--- a/public/404.html
+++ b/public/404.html
@@ -62,6 +62,9 @@
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+    <p style="text-align: center">
+      <a href="/">Back to home page</a>
+    </p>
   </div>
 </body>
 </html>
